<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/settings_connection">
    <Preference
      android:key="@string/preferences_key_connection_manager"
      android:title="@string/settings_manage_connections" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/settings_miscellaneous">
    <CheckBoxPreference
      android:defaultValue="false"
      android:key="@string/settings_key_reduce_volume"
      android:summary="@string/settings_miscellaneous_reduce_volume_description"
      android:title="@string/settings_miscellaneous_reduce_volume" />

  </PreferenceCategory>
  <com.afollestad.materialdialogs.prefs.MaterialListPreference
    android:defaultValue="@string/search_click_default_value"
    android:dialogTitle="@string/settings_search_default_title"
    android:entries="@array/search_click_options"
    android:entryValues="@array/search_click_options_values"
    android:key="@string/settings_search_default_key"
    android:summary="@string/settings_search_default_summary"
    android:title="@string/settings_search_default_title" />

  <PreferenceCategory android:title="@string/preferences_category_about">
    <Preference
      android:key="@string/preferences_open_source"
      android:title="@string/settings_oss_license" />
    <Preference
      android:key="@string/settings_key_license"
      android:title="@string/settings_title_license" />
    <Preference
      android:key="@string/settings_version"
      android:summary="@string/settings_version_number"
      android:title="@string/preferences_about_version" />
    <Preference
      android:key="@string/pref_key_build_time"
      android:title="Build Time" />
    <Preference
      android:key="@string/pref_key_revision"
      android:title="Revision" />

  </PreferenceCategory>

</PreferenceScreen>