<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
        android:id="@+id/drawer_menu_home"
        android:icon="@drawable/ic_home_grey_600_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/drawer_menu_library"
        android:icon="@drawable/ic_storage_grey_600_24dp"
        android:title="@string/menu_library" />
    <item
        android:id="@+id/drawer_menu_playlist"
        android:icon="@drawable/ic_list_grey_600_24dp"
        android:title="@string/menu_playlist" />

    <item
        android:id="@+id/drawer_menu_now_playing"
        android:icon="@drawable/ic_view_list_grey_600_24dp"
        android:title="@string/menu_now_playing" />

    <item
        android:id="@+id/drawer_menu_lyrics"
        android:icon="@drawable/ic_view_headline_grey_600_24dp"
        android:title="@string/menu_lyrics" />
  </group>

  <item android:id="@+id/drawer_submenu"
      android:title="">
    <menu>
      <item
          android:id="@+id/drawer_menu_settings"
          android:title="@string/menu_settings" />
      <item
          android:id="@+id/drawer_menu_help"
          android:title="@string/menu_help" />

      <item
          android:id="@+id/drawer_menu_feedback"
          android:title="@string/menu_feedback" />

      <item
          android:id="@+id/drawer_menu_connect"
          android:title="@string/drawer_connection_status_off" />
      <item
          android:id="@+id/drawer_menu_exit"
          android:title="@string/menu_exit" />
    </menu>

  </item>

</menu>
