<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_lastfm_scrobble"
        android:checkable="true"
        android:title="@string/lastfm_scrobble"/>

    <item
        android:id="@+id/menu_rating_dialog"
        android:icon="@drawable/ic_action_star_rate"
        android:title="@string/rate_the_playing_track"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_lastfm_love"
        android:icon="@drawable/ic_action_favorite_outline"
        android:title="@string/lastfm_love"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/actionbar_share"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:title="@string/main_menu_title_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom"/>

</menu>