<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="@dimen/mbrc_info_tab_height"
              android:gravity="center_vertical|center_horizontal">

    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/main_repeat_button"
            android:background="@drawable/selectable_background_mbrc_dark"
            android:contentDescription="@string/main_button_repeat_description"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_media_repeat"/>

    <ImageButton
            android:id="@+id/main_button_previous"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/selectable_background_mbrc_dark"
            android:contentDescription="@string/main_button_previous_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_media_previous"/>

    <ImageButton
            android:id="@+id/main_button_play_pause"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:background="@drawable/selectable_background_mbrc_dark"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:clickable="true"
            android:contentDescription="@string/main_button_play_pause_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_media_play"/>

    <ImageButton
            android:id="@+id/main_button_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/selectable_background_mbrc_dark"
            android:contentDescription="@string/main_button_next_description"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_media_next"/>

    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/selectable_background_mbrc_dark"
            android:id="@+id/main_shuffle_button"
            android:src="@drawable/ic_media_shuffle"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/main_button_shuffle_description"/>

</LinearLayout>