<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_dialog_name"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/side_margin_half"
            android:layout_marginLeft="@dimen/side_margin_half"
            android:layout_marginRight="@dimen/side_margin_half"
            android:hint="@string/settings_dialog_hint_name"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_dialog_host"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/side_margin_half"
            android:layout_marginLeft="@dimen/side_margin_half"
            android:layout_marginRight="@dimen/side_margin_half"
            android:hint="@string/settings_dialog_hint_host"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_dialog_port"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/side_margin_half"
            android:layout_marginLeft="@dimen/side_margin_half"
            android:layout_marginRight="@dimen/side_margin_half"
            android:inputType="number"
            android:numeric="integer"
            android:maxLength="5"
            android:hint="@string/settings_dialog_hint_port"/>

</LinearLayout>