<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/mini_control_height"
    android:background="@color/background_material_dark">

  <ImageView
      android:id="@+id/mc_track_cover"
      android:layout_width="@dimen/mini_control_height"
      android:layout_height="match_parent"
      android:contentDescription="@string/description_album_cover"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_image_no_cover" />

  <LinearLayout
      android:id="@+id/relativeLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:layout_toEndOf="@+id/mc_track_cover"
      android:layout_toLeftOf="@+id/button_layout"
      android:layout_toRightOf="@+id/mc_track_cover"
      android:layout_toStartOf="@+id/button_layout"
      android:gravity="center_vertical"
      android:orientation="vertical"
      android:paddingLeft="@dimen/small_margin"
      android:paddingRight="@dimen/small_margin">

    <TextView
        android:id="@+id/mc_track_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:singleLine="true"
        android:textColor="@color/remote_text"
        android:textSize="@dimen/abc_text_size_title_material"
        tools:ignore="UnusedAttribute"
        tools:text="All night" />

    <TextView
        android:id="@+id/mc_track_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:singleLine="true"
        android:textColor="@color/remote_secondary_text"
        android:textSize="@dimen/abc_text_size_small_material"
        tools:ignore="UnusedAttribute"
        tools:text="Parov Stelar" />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/button_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_gravity="center_vertical|end"
      android:baselineAligned="false">

    <ImageButton
        android:id="@+id/mc_prev_track"
        android:layout_width="@dimen/mini_control_height"
        android:layout_height="@dimen/mini_control_height"
        android:background="?attr/selectableItemBackground"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/main_button_previous_description"
        android:src="@drawable/ic_action_previous" />

    <ImageButton
        android:id="@+id/mc_play_pause"
        android:layout_width="@dimen/mini_control_height"
        android:layout_height="@dimen/mini_control_height"
        android:background="?attr/selectableItemBackground"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/main_button_play_pause_description"
        android:src="@drawable/ic_action_play" />

    <ImageButton
        android:id="@+id/mc_next_track"
        android:layout_width="@dimen/mini_control_height"
        android:layout_height="@dimen/mini_control_height"
        android:background="?attr/selectableItemBackground"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/main_button_next_description"
        android:src="@drawable/ic_action_next" />

  </LinearLayout>

</RelativeLayout>
