<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_dark"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="0dp"
    tools:ignore="NestedWeights">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <ImageView
        android:id="@+id/widget_small_image"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@drawable/ic_image_no_cover"
        android:contentDescription="@null"
        android:scaleType="centerInside" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

      <ImageButton
          android:id="@+id/widget_small_previous"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:background="@drawable/notification_button_background"
          android:contentDescription="@string/main_button_previous_description"
          android:focusable="true"
          android:padding="0dp"
          android:scaleType="fitCenter"
          android:src="@drawable/ic_action_previous" />

      <ImageButton
          android:id="@+id/widget_small_play"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:background="@drawable/notification_button_background"
          android:contentDescription="@string/main_button_play_pause_description"
          android:focusable="true"
          android:padding="0dp"
          android:scaleType="fitCenter"
          android:src="@drawable/ic_action_play" />

      <ImageButton
          android:id="@+id/widget_small_next"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:background="@drawable/notification_button_background"
          android:contentDescription="@string/main_button_next_description"
          android:focusable="true"
          android:padding="0dp"
          android:scaleType="fitCenter"
          android:src="@drawable/ic_action_next" />

    </LinearLayout>

  </LinearLayout>

  <LinearLayout
      android:id="@+id/widget_small_track_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="fill"
      android:layout_marginTop="2dp"
      android:focusable="true"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:paddingLeft="@dimen/small_margin"
      android:paddingRight="@dimen/small_margin">

    <TextView
        android:id="@+id/widget_small_line_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:singleLine="true"
        android:textColor="@color/remoteText"
        android:textSize="@dimen/widget_small_text"
        android:textStyle="bold"
        tools:text="Rock it for me" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dash"
        android:paddingRight="@dimen/small_margin"
        android:paddingLeft="@dimen/small_margin"
        android:textSize="@dimen/widget_small_text" />

    <TextView
        android:id="@+id/widget_small_line_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textColor="@color/remoteSecondaryText"
        android:textSize="@dimen/widget_small_text"
        tools:text="Caravan Palace" />

  </LinearLayout>


</LinearLayout>
